--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
+									</ form>
 								</section>
 
 							<!-- Menu -->
@@ -132,7 +132,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Projects</a></li>
+										<li><a href="#">Projects</a></li>
 										<li><a href="https://drive.google.com/drive/folders/1P9cg0wSD3nKL6oypLYOMMttpPydEh3Rz">Download Resume</a></li>
 										
 										
