--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://medium.com/@ezehgideon92/uk-train-rides-da8e4baf29ed" class="image"><img src="images/1.png" alt="" /></a>
+											<h3>UK TRAIN RIDES</h3>
+											<p>An exploratory dashboard that helps analyze traveler behavior and operating performance.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://medium.com/@ezehgideon92/uk-train-rides-da8e4baf29ed" class="button">View Project</a></li>
 											</ul>
 										</article>
 										
